Updating ASPN zone

--- a/data/aspn.yml
+++ b/data/aspn.yml
@@ -1,7 +1,15 @@
-- https://www.facebook.com/actionshow1/videos/1126651627479803/
-- https://www.facebook.com/actionshow1/videos/1124549971023302/
-- https://www.facebook.com/actionshow1/videos/1124420237702942/
-- https://www.facebook.com/actionshow1/videos/1123353467809619/
-- https://www.facebook.com/actionshow1/videos/1116246598520306/
-- https://www.facebook.com/actionshow1/videos/1111727552305544/
-- https://www.facebook.com/actionshow1/videos/1111708255640807/
+midweek:
+  - https://www.facebook.com/actionshow1/videos/1130204900457809/
+  - https://www.facebook.com/actionshow1/videos/1123353467809619/
+  - https://www.facebook.com/actionshow1/videos/1116246598520306/
+  - https://www.facebook.com/actionshow1/videos/1111727552305544/
+  - https://www.facebook.com/actionshow1/videos/1111708255640807/
+
+postbattle:
+  - https://www.facebook.com/actionshow1/videos/1132138706931095/
+  - https://www.facebook.com/actionshow1/videos/1126651627479803/
+  - https://www.facebook.com/actionshow1/videos/1124549971023302/
+
+segments:
+  - https://www.facebook.com/actionshow1/videos/1131595193652113/
+  - https://www.facebook.com/actionshow1/videos/1124420237702942/
