--- a/data/shows/2017-07-08-09.yml
+++ b/data/shows/2017-07-08-09.yml
@@ -5,3 +5,7 @@ teams:
   - you-did-this
   - cardigan-party
   - group-therapy
+scores:
+  - you-did-this: 63
+  - cardigan-party: 52
+  - group-therapy: 65
