--- a/data/shows/2017-07-08-1030.yml
+++ b/data/shows/2017-07-08-1030.yml
@@ -5,3 +5,7 @@ teams:
   - hip-hop-harold
   - gary-part-ii-son-of-gary
   - cinema-harold
+scores:
+  - hip-hop-harold: 75
+  - gary-part-ii-son-of-gary: 42
+  - cinema-harold: 51
