--- a/data/shows/2017-07-20-1030.yml
+++ b/data/shows/2017-07-20-1030.yml
@@ -1,5 +1,6 @@
 location: vt
 date: July 20 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1030pm-7-20-17
 teams:
   - tipsy-zone
   - hot-buttered-popcorn
