--- a/data/shows/2017-07-21-1030-2.yml
+++ b/data/shows/2017-07-21-1030-2.yml
@@ -1,5 +1,6 @@
 location: vt
 date: July 21 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1035pm-7-21-17
 teams:
   - bouncers
   - gary-part-ii-son-of-gary
