--- a/data/shows/2017-07-22-0730.yml
+++ b/data/shows/2017-07-22-0730.yml
@@ -1,5 +1,6 @@
 location: vt
 date: July 22 @ 7:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-730pm-7-22-17
 teams:
   - hip-hop-harold
   - sarah-and-chris
