--- a/data/shows/2017-07-22-1030.yml
+++ b/data/shows/2017-07-22-1030.yml
@@ -1,5 +1,6 @@
 location: vt
 date: July 22 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1030pm-7-22-17
 teams:
   - last-sleep-over
   - cardigan-party
