--- a/data/shows/2017-07-28-09.yml
+++ b/data/shows/2017-07-28-09.yml
@@ -1,5 +1,6 @@
 location: vt
 date: July 27 @ 9:00pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9pm-7-27-17
 teams:
   - hip-hop-harold
   - hot-buttered-popcorn
