--- a/data/teams/gary-part-ii-son-of-gary.yml
+++ b/data/teams/gary-part-ii-son-of-gary.yml
@@ -1,4 +1,5 @@
 name: "Gary Part II: Son of Gary"
 members:
-  - Byron Youngblood
-  - Matt Vilichay
+  - Gary
+  - Gary
+bio: From parts unknown, coming out of the mist.
