--- a/data/shows/2017-07-21-1030-1.yml
+++ b/data/shows/2017-07-21-1030-1.yml
@@ -1,5 +1,6 @@
 location: vt
 date: July 21 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1030pm-7-21-17
 teams:
   - you-did-this
   - pretty-much-sisters
