--- a/data/shows/2017-07-21-1030-1.yml
+++ b/data/shows/2017-07-21-1030-1.yml
@@ -5,3 +5,7 @@ teams:
   - you-did-this
   - pretty-much-sisters
   - cinema-harold
+scores:
+  - you-did-this: 26
+  - pretty-much-sisters: 53
+  - cinema-harold: 53
