--- a/data/shows/2017-07-29-09-1.yml
+++ b/data/shows/2017-07-29-09-1.yml
@@ -2,6 +2,6 @@ location: hw
 date: July 29 @ 9:00pm
 tix: https://www-highwirecomedy-com.seatengine.com/shows/59831
 teams:
-  - hip-hop-harold
-  - hot-buttered-popcorn
-  - red-pill-players
+  - tipsy-zone
+  - cardigan-party
+  - cinema-harold
