--- a/data/shows/2017-07-29-09-1.yml
+++ b/data/shows/2017-07-29-09-1.yml
@@ -5,3 +5,7 @@ teams:
   - tipsy-zone
   - cardigan-party
   - cinema-harold
+scores:
+  - tipsy-zone: 20
+  - cardigan-party: 10
+  - cinema-harold: 18
