--- a/data/shows/2017-07-29-09-2.yml
+++ b/data/shows/2017-07-29-09-2.yml
@@ -5,3 +5,7 @@ teams:
   - you-did-this
   - gary-part-ii-son-of-gary
   - 20-chihuahuas
+scores:
+  - you-did-this: 0
+  - gary-part-ii-son-of-gary: 0
+  - 20-chihuahuas: 0
