--- a/data/shows/2017-07-29-1015.yml
+++ b/data/shows/2017-07-29-1015.yml
@@ -5,3 +5,7 @@ teams:
   - bouncers
   - sarah-and-chris
   - group-therapy
+scores:
+  - bouncers: 29
+  - sarah-and-chris: 13
+  - group-therapy: 36
