--- a/data/shows/2017-08-03-09.yml
+++ b/data/shows/2017-08-03-09.yml
@@ -4,3 +4,7 @@ teams:
   - gary-part-ii-son-of-gary
   - pretty-much-sisters
   - hot-buttered-popcorn
+scores:
+  - gary-part-ii-son-of-gary: 13
+  - pretty-much-sisters: 15
+  - hot-buttered-popcorn: 14
