--- a/data/shows/2017-08-05-1030.yml
+++ b/data/shows/2017-08-05-1030.yml
@@ -4,3 +4,7 @@ teams:
   - last-sleep-over
   - sarah-and-chris
   - cinema-harold
+scores:
+  - last-sleep-over: 42
+  - sarah-and-chris: 30
+  - cinema-harold: 36
