--- a/data/shows/2017-08-12-1015.yml
+++ b/data/shows/2017-08-12-1015.yml
@@ -1,5 +1,6 @@
 location: hw
 date: Aug 12 @ 10:15pm
+tix: https://www-highwirecomedy-com.seatengine.com/shows/60995
 teams:
   - bouncers
   - cardigan-party
