--- a/data/shows/2017-08-12-1030.yml
+++ b/data/shows/2017-08-12-1030.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Aug 12 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1030-8-12-17
 teams:
   - sarah-and-chris
   - pretty-much-sisters
