--- a/data/shows/2017-08-24-09.yml
+++ b/data/shows/2017-08-24-09.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Aug 24 @ 9:00pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9-8-24-17
 teams:
   - tipsy-zone
   - you-did-this
