--- a/data/shows/2017-08-25-1030.yml
+++ b/data/shows/2017-08-25-1030.yml
@@ -1,5 +1,6 @@
 location: vt
-data: Aug 25 @ 10:30pm
+date: Aug 25 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1030-8-25-17
 teams:
   - gary-part-ii-son-of-gary
   - hot-buttered-popcorn
