--- a/data/shows/2017-08-31-09.yml
+++ b/data/shows/2017-08-31-09.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Aug 31 @ 9:00pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9-8-31-17
 teams:
   - hip-hop-harold
   - sarah-and-chris
