--- a/data/shows/2017-08-26-1030.yml
+++ b/data/shows/2017-08-26-1030.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Aug 26 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-1030-8-26-17
 teams:
   - red-pill-players
   - two-scoops-please
