--- a/data/shows/2017-08-11-1030.yml
+++ b/data/shows/2017-08-11-1030.yml
@@ -5,3 +5,7 @@ teams:
   - red-pill-players
   - group-therapy
   - two-scoops-please
+scores:
+  - red-pill-players: 89
+  - group-therapy: 72
+  - two-scoops-please: 55
