--- a/data/shows/2017-08-12-1030.yml
+++ b/data/shows/2017-08-12-1030.yml
@@ -5,3 +5,7 @@ teams:
   - sarah-and-chris
   - pretty-much-sisters
   - hot-buttered-popcorn
+scores:
+  - sarah-and-chris: 20
+  - pretty-much-sisters: 38
+  - hot-buttered-popcorn: 20
