--- a/data/shows/2017-08-18-1030.yml
+++ b/data/shows/2017-08-18-1030.yml
@@ -5,3 +5,7 @@ teams:
   - 20-chihuahuas
   - cinema-harold
   - group-therapy
+scores:
+  - 20-chihuahuas: 25
+  - cinema-harold: 51
+  - group-therapy: 44
