--- a/data/shows/2017-08-19-1030.yml
+++ b/data/shows/2017-08-19-1030.yml
@@ -5,3 +5,7 @@ teams:
   - cardigan-party
   - sarah-and-chris
   - pretty-much-sisters
+scores:
+  - cardigan-party: 16
+  - sarah-and-chris: 23
+  - pretty-much-sisters: 33
