--- a/data/shows/2017-08-26-1015.yml
+++ b/data/shows/2017-08-26-1015.yml
@@ -2,6 +2,6 @@ location: hw
 date: Aug 26 @ 10:15pm
 tix: https://www-highwirecomedy-com.seatengine.com/shows/61004
 teams:
-  - last-sleep-over
-  - pretty-much-sisters
-  - group-therapy
+  - red-pill-players
+  - two-scoops-please
+  - 20-chihuahuas
