--- a/data/shows/2017-08-25-1030.yml
+++ b/data/shows/2017-08-25-1030.yml
@@ -5,3 +5,7 @@ teams:
   - gary-part-ii-son-of-gary
   - hot-buttered-popcorn
   - cardigan-party
+scores:
+  - gary-part-ii-son-of-gary: 14
+  - hot-buttered-popcorn: 15
+  - cardigan-party: 25
