--- a/data/shows/2017-08-26-1015.yml
+++ b/data/shows/2017-08-26-1015.yml
@@ -5,3 +5,7 @@ teams:
   - red-pill-players
   - two-scoops-please
   - 20-chihuahuas
+scores:
+  - red-pill-players: 0
+  - two-scoops-please: 0
+  - 20-chihuahuas: 0
