--- a/data/shows/2017-08-31-09.yml
+++ b/data/shows/2017-08-31-09.yml
@@ -5,3 +5,7 @@ teams:
   - hip-hop-harold
   - sarah-and-chris
   - cinema-harold
+scores:
+  - hip-hop-harold: 42
+  - sarah-and-chris: 29
+  - cinema-harold: 25
