--- a/data/shows/2017-09-01-1030.yml
+++ b/data/shows/2017-09-01-1030.yml
@@ -4,3 +4,7 @@ teams:
   - bouncers
   - hip-hop-harold
   - hot-buttered-popcorn
+scores:
+  - bouncers: 46
+  - hip-hop-harold: 56
+  - hot-buttered-popcorn: 42
