--- a/data/shows/2017-09-02-1030.yml
+++ b/data/shows/2017-09-02-1030.yml
@@ -4,3 +4,7 @@ teams:
   - gary-part-ii-son-of-gary
   - sarah-and-chris
   - group-therapy
+scores:
+  - gary-part-ii-son-of-gary: 21
+  - sarah-and-chris: 10
+  - group-therapy: 23
