--- a/data/shows/2017-09-07-09.yml
+++ b/data/shows/2017-09-07-09.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Sept 7 @ 9:00pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9-7-17
 teams:
   - tipsy-zone
   - bouncers
