--- a/data/shows/2017-09-08-1030.yml
+++ b/data/shows/2017-09-08-1030.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Sept 8 @ 10:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9-8-17
 teams:
   - gary-part-ii-son-of-gary
   - cardigan-party
