--- a/data/shows/2017-09-09-0830.yml
+++ b/data/shows/2017-09-09-0830.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Sept 9 @ 8:30pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9-9-17
 teams:
   - red-pill-players
   - 20-chihuahuas
