--- a/data/shows/2017-09-09-0945.yml
+++ b/data/shows/2017-09-09-0945.yml
@@ -1,5 +1,6 @@
 location: vt
 date: Sept 9 @ 9:45pm
+tix: https://www.freshtix.com/events/atlanta-improv-league-9-9-17-2
 teams:
   - you-did-this
   - hot-buttered-popcorn
