--- a/data/shows/2017-09-09-1015.yml
+++ b/data/shows/2017-09-09-1015.yml
@@ -1,5 +1,6 @@
 location: hw
 date: Sept 9 @ 10:15pm
+tix: https://www-highwirecomedy-com.seatengine.com/shows/62550
 teams:
   - hip-hop-harold
   - pretty-much-sisters
